--- a/RH Manager.Windows/RH Manager.Windows.csproj
+++ b/RH Manager.Windows/RH Manager.Windows.csproj
@@ -54,6 +54,8 @@
     </Compile>
     <Compile Include="Core\AdicionalNoturno.cs" />
     <Compile Include="Core\AdicionalPericulosidade.cs" />
+    <Compile Include="Core\Colaborador.cs" />
+    <Compile Include="Core\Estados.cs" />
     <Compile Include="Core\Fgts.cs" />
     <Compile Include="Core\Inss.cs" />
     <Compile Include="Core\Irrf.cs" />
@@ -131,6 +133,9 @@
     <Compile Include="Simuladores\frmDescontoIrpf.Designer.cs">
       <DependentUpon>frmDescontoIrpf.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Cadastros\frmFuncionario.resx">
+      <DependentUpon>frmFuncionario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PrincipalMdi.resx">
       <DependentUpon>PrincipalMdi.cs</DependentUpon>
     </EmbeddedResource>
@@ -205,6 +210,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\periculosidade.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-whatsapp-16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-whatsapp-32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
